--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,15 @@
 
 </head>
 
+<!--no selection
+<script type="text/javascript">
+	document.ondragstart = noselect;
+	document.onselectstart = noselect;
+	document.oncontextmenu = noselect;
+	function noselect() {return false;}
+</script>
+-->
+
 <body>
 
 {% block content -%}
