Change structure of Project (static/e.g.)

--- a/templates/about.html
+++ b/templates/about.html
@@ -29,8 +29,8 @@
         <tr>
 			<td id="col_email">
     			<div>
-                    <a target="_blank" href="/classificator/images/new_mail.png">
-                        <img src="/classificator/images/new_mail.png" alt="QR with mail address" width="185"; height="185"; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;"; class="zoom-effect">
+                    <a target="_blank" href="/static/images/new_mail.png">
+                        <img src="/static/images/new_mail.png" alt="QR with mail address" width="185" ; height="185" ; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;" class="zoom-effect">
                     </a>
                 </div>
                 <a target="_blank" title="Связаться с автором" href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору 5.4";>Написать письмо автору</a>
@@ -38,20 +38,20 @@
 
 			<td id="col_url">
     			<div>
-                    <a target="_blank" href="/classificator/images/new_url.png">
-                        <img src="/classificator/images/new_url.png"  alt="QR with url-address" width="185"; height="185"; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;"; class="zoom-effect">
+                    <a target="_blank" href="/static/images/new_url.png">
+                        <img src="/static/images/new_url.png" alt="QR with url-address" width="185" ; height="185" ; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;" ; class="zoom-effect">
                     </a>
                 </div>
-                <a target="_blank" title="Открыть QR-код в новом окне" href="/classificator/images/new_url.png">Открыть в новом окне для сканирования</a>
+                <a target="_blank" title="Открыть QR-код в новом окне" href="/static/images/new_url.png">Открыть в новом окне для сканирования</a>
 			</td>
 		</tr>
     </table>
 
 
-    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/classificator/images/top_page.png" alt="top" width="36"; height="36";</a>
+    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;</a>
 
 
     <div class="linkToMain">
-        <a title="На главную страницу" href={{ url_for("main_page") }}><img src="/classificator/images/main_64.png" alt="home" width="36"; height="36";/></a>
+        <a title="На главную страницу" href={{ url_for("main_page") }}><img src="/static/images/main_64.png" alt="home" width="36" ; height="36" ;/></a>
     </div></div>
 {% endblock %}
