--- a/templates/index.html
+++ b/templates/index.html
@@ -36,22 +36,22 @@
 
         <tr>
             <td id="col1">
-                <div><a href={{ url_for("about_app_page") }} class="coll1_text">О приложении</a></div>
+                <div class="coll1_text"><a href={{ url_for("about_app_page") }} >О приложении</a></div>
             </td>
 
             <td id="col2">
-                <div><a target="_blank" href="/classificator/images/404.jpg"; class="coll2_text">Посмотреть картинку</a></div><br>
-                <div><img src="/classificator/images/Logo_App.png" alt="top" width="16"; height="16";/><a href="/classificator/files/Классификатор_5.4.1.zip" download="Классификатор_5.4.1.zip"; class="coll1_text"; style="margin-left: 8px;">Скачать приложение</a></div>
+                <div><a target="_blank" href="/static/images/404.jpg" class="coll2_text">Посмотреть картинку</a></div><br>
+                <div><img src="/static/images/Logo_App.png" alt="top" width="16" ; height="16" ;/><a href="/static/files/Классификатор_5.4.1.zip" download="Классификатор_5.4.1.zip" ; class="coll1_text" ; style="margin-left: 8px;">Скачать приложение</a></div>
             </td>
 
 
             <td id="col3">
-                <div><a href={{ url_for("about_page") }} class="coll3_text">О сайте</a></div>
+                <div class="coll3_text"> <a href={{ url_for("about_page") }} >О сайте</a></div>
             </td>
         </tr>
     </table>
     </div>
 
-    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/classificator/images/top_page.png" alt="top" width="36"; height="36";/></a>
+    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a>
 
 {% endblock %}
