--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -106,7 +106,7 @@
     }
 
     html {
-        background: url(/classificator/images/bg_01.jpg) no-repeat center center fixed;
+        background: url(/static/images/bg_01.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
