--- a/templates/application.html
+++ b/templates/application.html
@@ -61,7 +61,7 @@
                         (в случае многопластового месторождения). Дополнительная возможность - создание шаблона файла протокола ЦКР в зависимости
                         от классификации месторождения с характеристикой УВ-сырья и основных технологических показателей.
                     </div>
-                </p>
+
 
                 <p id="Лицензионное соглашение" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Лицензионное соглашение<br>
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
@@ -123,7 +123,7 @@
                                 </ol>
                         </ol>
                     </div>
-                </p>
+
 
                 <p id="Системные требования" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; font-weight: bold;">Системные требования<br>
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
@@ -149,26 +149,29 @@
                             <li>объем оперативной памяти - 2,0 ГБ.</li>
                         </ul>
                     </div>
-                </p>
 
                 <p id="Ранние версии" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Ранние версии<br>
-                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
-                        Последнюю версию приложения можно скачать по ссылке ниже:<br>
-                        <center><a href="/classificator/files/Классификатор_5.4.1.zip" download="Классификатор_5.4.1.zip"; class="mail_sup">Классификатор 5.4.1</a> (21.09.2023)</center><br>
-                        Здесь будет дополняться список ранних версий приложения...
-
-                    </div>
-                </p>
+                <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                    Последнюю версию приложения можно скачать по ссылке ниже:<br>
+                    <center><a href="/static/files/Классификатор_5.4.1.zip" download="Классификатор_5.4.1.zip" ;
+                               class="mail_sup">Классификатор 5.4.1</a> (21.09.2023)
+                    </center>
+                    <br>
+                    Здесь будет дополняться список ранних версий приложения...
+                </div>
+{#                <div style="font-size: 18px; text-align: justify; line-height: 1.3;"> #}
+{#                    список ранних версий приложения...#}
+{#                </div>#}
 
             </td>
         </tr>
     </table>
 
 
-    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/classificator/images/top_page.png" alt="top" width="36"; height="36";/></a>
+    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a>
 
 
     <div class="linkToMain">
-        <a title="На главную страницу" href={{ url_for("main_page") }}><img src="/classificator/images/main_64.png" alt="home" width="36"; height="36";/></a>
+        <a title="На главную страницу" href={{ url_for("main_page") }}><img src="/static/images/main_64.png" alt="home" width="36" ; height="36" ;/></a>
     </div></div>
 {% endblock %}
