--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,17 @@
     {% endblock %}
 
 <!--icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/classificator/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/classificator/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/classificator/media/favicon-16x16.png">
-    <link rel="manifest" href="/classificator/media/site.webmanifest">
-    <link rel="mask-icon" href="/classificator/media/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="//apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/media/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/media/favicon-16x16.png">
+    <link rel="manifest" href="/static/media/site.webmanifest">
+    <link rel="mask-icon" href="/static/media/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 <!--icon -->
     <meta content="application/pdf">
 
-<link rel="stylesheet" href="/classificator/styles/style.css">
+<link rel="stylesheet" href="/static/styles/style.css">
 
 </head>
 
