--- a/templates/error_404.html
+++ b/templates/error_404.html
@@ -5,11 +5,11 @@
     <title>Ошибка загрузки страницы!</title>
 
     <!--icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/classificator/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/classificator/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/classificator/media/favicon-16x16.png">
-    <link rel="manifest" href="/classificator/media/site.webmanifest">
-    <link rel="mask-icon" href="/classificator/media/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="//media/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="//favicon-16x16.png">
+    <link rel="manifest" href="//site.webmanifest">
+    <link rel="mask-icon" href="//safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 <!--icon -->
@@ -34,7 +34,7 @@
 
 <body>
     <h1>Страница не найдена!</h1>
-    <p><img src="/classificator/images/404.jpg" alt="404 error" style="width: 600px;" /></p>
+    <p><img src="/static/images/404.jpg" alt="404 error" style="width: 600px;" /></p>
     <p>То, что вы искали, просто не существует.</p>
     <p>Для продолжения перейдите на <a href="{{ url_for("main_page") }}" title="Нажмите, чтобы перейти"> главную</a> страницу сайта</p>
 
