--- a/templates/error_500.html
+++ b/templates/error_500.html
@@ -5,11 +5,11 @@
     <title>Ошибка сервера!</title>
 
     <!--icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/classificator/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/classificator/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/classificator/media/favicon-16x16.png">
-    <link rel="manifest" href="/classificator/media/site.webmanifest">
-    <link rel="mask-icon" href="/classificator/media/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="//apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="//favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="//favicon-16x16.png">
+    <link rel="manifest" href="//site.webmanifest">
+    <link rel="mask-icon" href="//safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 <!--icon -->
@@ -32,7 +32,7 @@
 </style>
 <body>
     <h1>Проблема с загрузкой страницы!</h1>
-    <p><img src="/classificator/images/500.jpg"/></p>
+    <p><img src="//500.jpg" alt="no image"/></p>
 
     <p>Идет восстановление работоспособности сервера</p>
 </body>
