--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     {% endblock %}
 
 <!--icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="//apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/media/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/media/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/media/favicon-16x16.png">
     <link rel="manifest" href="/static/media/site.webmanifest">
