--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,27 @@
    .coll3_text {
         font-size: 20px;
    }
+
+   #popup-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: none;
+}
+
+    #popup {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
 </style>
 
     <div class="text-align: center">
@@ -42,6 +63,7 @@
             <td id="col2">
                 <div><a target="_blank" href="/static/images/404.jpg" class="coll2_text">Посмотреть картинку</a></div><br>
                 <div><img src="/static/images/Logo_App.png" alt="top" width="16" ; height="16" ;/><a href="/static/files/Классификатор_5.4.1.zip" download="Классификатор_5.4.1.zip" ; class="coll1_text" ; style="margin-left: 8px;">Скачать приложение</a></div>
+
             </td>
 
 
@@ -55,3 +77,4 @@
     <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a>
 
 {% endblock %}
+
