Change structure of Project (static/e.g.)

--- a/templates/error_500.html
+++ b/templates/error_500.html
@@ -32,7 +32,7 @@
 </style>
 <body>
     <h1>Проблема с загрузкой страницы!</h1>
-    <p><img src="//500.jpg" alt="no image"/></p>
+    <p><img src="/static/images/500.jpg" alt="no image"/></p>
 
     <p>Идет восстановление работоспособности сервера</p>
 </body>
