--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,10 @@
 
 <body>
 
+    <div class="header">
+        <div style="margin-top: 5px; padding-top: 5px; margin-right: 10px; text-align: right;">Текущие дата и время: </div>
+    </div>
+
 {% block content -%}
     {%- block mainmenu -%}
 {#        <ul>#}
