Change structure of Project (static/e.g.)

--- a/templates/application.html
+++ b/templates/application.html
@@ -53,7 +53,9 @@
                     <li><a href="#Системные требования">Системные требования</a></li>
                     <li><a href="#Ранние версии">Ранние версии</a></li>
                 </ul>
-                <p id="Описание приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Описание приложения<br>
+
+                <p id="Описание приложения" style="visibility: hidden; margin: 10px;"</p>
+                <p id="Описание приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; margin-top: 30px; font-weight: bold;">Описание приложения<br>
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         Программа предназначена для классификации месторождений по действующим нормативным документам.
                         Сбор основной геолого-промысловой информации по месторождению (сведения о недропользователе,
@@ -65,8 +67,8 @@
                         от классификации месторождения с характеристикой УВ-сырья и основных технологических показателей.
                     </div>
 
-
-                <p id="Лицензионное соглашение" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Лицензионное соглашение<br>
+                <p id="Лицензионное соглашение" style="visibility: hidden; margin: 10px;"</p>
+                <p id="Лицензионное соглашение" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; margin-top: 30px; font-weight: bold;">Лицензионное соглашение<br>
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         Программа является лицензированным программным продуктом.
                         Внимательно ознакомьтесь с условиями лицензионного соглашения перед началом работы с программным обеспечением, на которое оно распространяется.<br />
@@ -127,8 +129,8 @@
                         </ol>
                     </div>
 
-
-                <p id="Системные требования" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; font-weight: bold;">Системные требования<br>
+                <p id="Системные требования" style="visibility: hidden; margin: 10px;"</p>
+                <p id="Системные требования" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-top: 30px; font-weight: bold;">Системные требования<br>
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         <center>Для стабильной работы приложения необходимы следующие системные требования:</center><br>
 
