Change structure of Project (static/e.g.)

--- a/templates/index.html
+++ b/templates/index.html
@@ -71,7 +71,7 @@
     </table>
     </div>
 
-    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a>
-
+    <!--<a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a>
+-->
 {% endblock %}
 
