--- a/templates/about.html
+++ b/templates/about.html
@@ -48,7 +48,7 @@
     </table>
 
 
-    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;</a>
+    <!--<a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a> -->
 
 
     <div class="linkToMain">
