--- a/templates/application.html
+++ b/templates/application.html
@@ -173,7 +173,7 @@
     </table>
 
 
-    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a>
+    <!--<a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a> -->
 
 
     <div class="linkToMain">
