Change structure of Project (static/e.g.)

--- a/templates/base.html
+++ b/templates/base.html
@@ -121,6 +121,7 @@
       .btn-up:hover {
         background-color: #155580;
       }
+        title: "Наверх страницы";
     }
     </style>
 
@@ -150,7 +151,7 @@
       </svg>
 
 
-      <div class="btn-up btn-up_hide">
+      <div class="btn-up btn-up_hide" title="Прокрутить страницу к началу">
         <svg class="btn-up-icon" role="img" aria-label="Прокрутить страницу к началу">
           <use xlink:href="#arrow-up-short"></use>
         </svg>
