Change structure of Project (static/e.g.)

--- a/templates/base.html
+++ b/templates/base.html
@@ -151,7 +151,7 @@
       </svg>
 
 
-      <div class="btn-up btn-up_hide" title="Прокрутить страницу к началу">
+      <div class="btn-up btn-up_hide" title="Прокрутить к началу страницы">
         <svg class="btn-up-icon" role="img" aria-label="Прокрутить страницу к началу">
           <use xlink:href="#arrow-up-short"></use>
         </svg>
