--- a/templates/application.html
+++ b/templates/application.html
@@ -11,7 +11,6 @@
    }
 
 
-
    #TextAbout {
     margin-left: 100px;
     margin-right: 100px;
@@ -47,14 +46,14 @@
         </tr>
         <tr>
             <td id="col_App" colspan="3" >
-                <ul style="font-size: 20px;">
+                <ul style="font-size: 20px; line-height: 1.3;">
                     <li><a href="#Описание приложения">Описание приложения</a></li>
-                    <li><a href="#Лицензионное соглашение">Лицензионное соглашение</a></li>
+                    <li><a href="#Лицензионное соглашение">Лицензионное соглашения</a></li>
                     <li><a href="#Системные требования">Системные требования</a></li>
                     <li><a href="#Ранние версии">Ранние версии</a></li>
                 </ul>
 
-                <p id="Описание приложения" style="visibility: hidden; margin: 10px;"</p>
+                <p id="Описание приложения" style="visibility: hidden; margin: 10px;">
                 <p id="Описание приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; margin-top: 30px; font-weight: bold;">Описание приложения<br>
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         Программа предназначена для классификации месторождений по действующим нормативным документам.
@@ -67,7 +66,7 @@
                         от классификации месторождения с характеристикой УВ-сырья и основных технологических показателей.
                     </div>
 
-                <p id="Лицензионное соглашение" style="visibility: hidden; margin: 10px;"</p>
+                <p id="Лицензионное соглашение" style="visibility: hidden; margin: 10px; scroll-behavior: smooth;"</p>
                 <p id="Лицензионное соглашение" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; margin-top: 30px; font-weight: bold;">Лицензионное соглашение<br>
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         Программа является лицензированным программным продуктом.
