--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta http-equiv="content-type" content="text/html" charset="UTF-8">
-    {% block title -%}
-        {% if title %}
-            <title>Классификатор - {{title}}</title>
-        {% else %}
-            <title>Классификатор</title>
-        {% endif %}
-    {% endblock %}
+    <head>
+        <meta http-equiv="content-type" content="text/html" charset="UTF-8">
+        {% block title -%}
+            {% if title %}
+                <title>Классификатор - {{title}}</title>
+            {% else %}
+                <title>Классификатор</title>
+            {% endif %}
+        {% endblock %}
 
-<!--icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/static/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/static/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/static/media/favicon-16x16.png">
-    <link rel="manifest" href="/static/media/site.webmanifest">
-    <link rel="mask-icon" href="/static/media/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-<!--icon -->
-    <meta content="application/pdf">
+    <!--icon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/static/media/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/media/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/media/favicon-16x16.png">
+        <link rel="manifest" href="/static/media/site.webmanifest">
+        <link rel="mask-icon" href="/static/media/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+    <!--icon -->
+        <meta content="application/pdf">
 
-<link rel="stylesheet" href="/static/styles/style.css">
+        <link rel="stylesheet" href="/static/styles/style.css">
 
 </head>
-
 
 <!--no selection
 <script type="text/javascript">
@@ -57,6 +56,10 @@
 <body>
 
     <style>
+        html {
+            scroll-behavior: smooth;
+        }
+
         .time_now {
             text-align: right;
             font-weight: bolder;
@@ -68,12 +71,13 @@
         .time_now:hover::after {
             content: attr(data-title); /* Выводим текст */
             position: absolute; /* Абсолютное позиционирование */
-            left: 90%;
+            left: 88%;
             top: 4%; /* Положение подсказки */
+            text-align: center;
             z-index: 1; /* Отображаем подсказку поверх других элементов */
             background: rgba(255, 255, 230, 0.85); /* Полупрозрачный цвет фона */
             font-family: "Times New Roman", Arial, sans-serif; /* Гарнитура шрифта */
-            font-size: 13px; /* Размер текста подсказки */
+            font-size: 14px; /* Размер текста подсказки */
             color: #002036;
             padding: 5px; /* Поля */
             border: 1px solid #333; /* Параметры рамки */
@@ -87,7 +91,7 @@
     .btn-up {
       position: fixed;
       background-color: #002f50;
-      right: 20px;
+      right: 10px;
       bottom: 30px;
       border-radius: 25px;
       cursor: pointer;
@@ -96,8 +100,8 @@
       justify-content: center;
       transition: opacity 0.15s ease-in-out, transform 0.3s ease-in-out;
       color: #fff;
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
       opacity: 1;
       transform: translateY(0);
     }
@@ -188,7 +192,7 @@
           }
           this.scrolling = false;
           // если пользователь прокрутил страницу более чем на 200px
-          if (scrollY > 400) {
+          if (scrollY > 200) {
             // сделаем кнопку .btn-up видимой
             this.show();
           } else {
@@ -217,7 +221,8 @@
     <div class="footer">
         <div style="margin-right: 5px; padding-top: 5px;">&copy;&nbsp;Павел Есаулов</div>
     </div>
-
     </body>
+</body>
 </html>
+
 
