Change structure of Project (static/e.g.)

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,3 +1,7 @@
+    html {
+            scroll-behavior: smooth;
+    }
+
     table {
         alignment: center;
         margin: auto;  /* center of the table */
