Change structure of Project (static/e.g.)

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,10 @@
     {{ super() }}
 
 <style>
+    html {
+        scroll-behavior: smooth;
+    }
+
     .topPage {
         position: fixed;
         right: 10px;
