Change structure of Project (static/e.g.)

--- a/templates/application.html
+++ b/templates/application.html
@@ -19,6 +19,7 @@
     padding: 10px;
     border-block: 10px;
     border-radius: 10px;
+    word-break: break-word;
    }
 
    .mail_sup {
@@ -59,10 +60,10 @@
                     <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         Программа предназначена для классификации месторождений по действующим нормативным документам.
                         Сбор основной геолого-промысловой информации по месторождению (сведения о недропользователе,
-                        геологические данные, данные по запасам УВС с указанием величин и их категорийности по принятым документам),
+                        геологические данные, данные по запасам УВС с указанием величин и их&nbsp;категорийности по принятым документам),
                         учет наличия закачки на месторождении/залежи, данные по геологической и гидродинамической моделям,
                         а также данные по действующим системам сбора и подготовки продукции скважин. Сохранение данных
-                        в формате MS Excel, с возможностью добавления дополнительного листа с информацией
+                        в формате MS Excel, с&nbsp;возможностью добавления дополнительного листа с информацией
                         (в случае многопластового месторождения). Дополнительная возможность - создание шаблона файла протокола ЦКР в зависимости
                         от классификации месторождения с характеристикой УВ-сырья и основных технологических показателей.
                     </div>
@@ -91,12 +92,12 @@
                                 <ol>
                                      <li>Вы не вправе декомпилировать, дизассемблировать, модифицировать, дополнять, разбирать, переводить, адаптировать,
                                      реорганизовывать, исправлять ошибки или производить какие-либо изменения в программу и/или её исполняемые компоненты.</li>
-                                     <li>Вы не имеете права распространять данное ПО за материальное вознаграждение, если только не имеете соответствующего разрешения от правообладателя.</li>
+                                     <li>Вы не имеете права распространять данное ПО за материальное вознаграждение, если только не имеете соответствующего разрешения от&nbsp;правообладателя.</li>
                                      <li>Вы не можете распространять не оригинальный дистрибутив, если не имеете соответствующего разрешения правообладателя.</li>
                                      <li>Запрещается удаление копирайта или другой информации об авторах и правообладателях ПО.</li>
                                      <li>Запрещается сдавать ПО в аренду или прокат.</li>
                                      <li>За нарушение интеллектуальных прав на ПО нарушитель несёт гражданскую, административную или уголовную ответственность
-                                     в соответствии с действующим законодательством.</li>
+                                     в&nbsp;соответствии с действующим законодательством.</li>
                                 </ol>
                             </li><br>
 
@@ -107,8 +108,8 @@
                                      <li>Правообладатель не даёт никаких гарантий работоспособности ПО на конкретном оборудовании.</li>
                                      <li>Правообладатель не даёт никаких гарантий работоспособности ПО, если Вы не обновляете его до актуальных версий.</li>
                                      <li>В виду того, что программа распространяется по принципу «как есть» («as is»), Вы должны осознавать, что используете данное ПО
-                                     на свой страх и риск. Правообладатель не несёт ответственности за какие-либо убытки и/или ущерб (в том числе убытки,
-                                     в связи с недополученной коммерческой прибылью, прерыванием деятельности, утратой информации или иной имущественный ущерб),
+                                     на&nbsp;свой страх и риск. Правообладатель не несёт ответственности за какие-либо убытки и/или ущерб (в том числе убытки,
+                                     в связи с&nbsp;недополученной коммерческой прибылью, прерыванием деятельности, утратой информации или иной имущественный ущерб),
                                      возникающий в связи с использованием или невозможностью использования данного ПО.</li>
                                 </ol>
                             </li><br>
@@ -151,7 +152,7 @@
                             <li>установленный Microsoft .NET Framework 4.0 или выше;</li>
                             <li>процессор с тактовой частотой 2 ГГц;</li>
                             <li>объем свободного места на жестком диске - не менее 50 МБ;</li>
-                            <li>объем оперативной памяти - 2,0 ГБ.</li>
+                            <li>объем оперативной памяти - 4,0 ГБ.</li>
                         </ul>
                     </div>
 
