--- a/templates/base.html
+++ b/templates/base.html
@@ -220,7 +220,7 @@
 
 
     <div class="footer">
-        <div style="margin-right: 5px; padding-top: 5px;">&copy;&nbsp;Павел Есаулов</div>
+        <div style="margin-right: 5px; padding-top: 5px;">©&nbsp;Павел Есаулов</div>
     </div>
     </body>
 </body>
