--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
             <td id="col0" colspan="3" height="60">Содержимое страницы &laquo;{{ title }}&raquo;</td>
         </tr>
         <tr>
-            <td id="col1" colspan="3" height="60">
+            <td id="col4_1" colspan="3" height="60">
                 <div>Описание сайта, указание службы поддержки и электронной почты</div><hr>
             </td>
         </tr>
