--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,10 @@
         font-size: 20px;
    }
 
+   .coll4_1_text {
+        font-size: 20px;
+   }
+
    #popup-overlay {
       position: fixed;
       top: 0;
@@ -73,6 +77,14 @@
                 <div class="coll3_text"> <a href={{ url_for("about_page") }} ; title="Информация о сайте">О сайте</a></div>
             </td>
         </tr>
+
+        <tr>
+            <td></td>
+            <td id="col4_1">
+                <div class="coll4_1_text"> <a href={{ url_for("contacts_page") }} ; title="Контакты">Контакты</a></div>
+            </td>
+        </tr>
+
     </table>
     </div>
 
