--- a/templates/base.html
+++ b/templates/base.html
@@ -149,7 +149,7 @@
 
 
       <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-        <symbol id="arrow-up-short" viewBox="0 0 16 16">
+        <symbol id="arrow-up-short" viewBox="0 0 16 16" >
           <path fill-rule="evenodd" d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z" />
         </symbol>
       </svg>
@@ -166,7 +166,7 @@
     const btnUp = {
       el: document.querySelector('.btn-up'),
       scrolling: false,
-      show() {
+      fadeIn() {
         if (this.el.classList.contains('btn-up_hide') && !this.el.classList.contains('btn-up_hiding')) {
           this.el.classList.remove('btn-up_hide');
           this.el.classList.add('btn-up_hiding');
@@ -175,7 +175,7 @@
           }, 300);
         }
       },
-      hide() {
+      fadeOut() {
         if (!this.el.classList.contains('btn-up_hide') && !this.el.classList.contains('btn-up_hiding')) {
           this.el.classList.add('btn-up_hiding');
           window.setTimeout(() => {
@@ -195,16 +195,16 @@
           // если пользователь прокрутил страницу более чем на 200px
           if (scrollY > 200) {
             // сделаем кнопку .btn-up видимой
-            this.show();
+            this.fadeIn();
           } else {
             // иначе скроем кнопку .btn-up
-            this.hide();
+            this.fadeOut();
           }
         });
         // при нажатии на кнопку .btn-up
         document.querySelector('.btn-up').onclick = () => {
           this.scrolling = true;
-          this.hide();
+          this.fadeOut();
           // переместиться в верхнюю часть страницы
           window.scrollTo({
             top: 0,
