--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -81,6 +81,58 @@
         box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
     }
 
+    .border {
+      list-style: none;
+      padding: 0;
+    }
+
+    .border li {
+      size: 50px;
+      font-family: "Times New Roman", Arial, sans-serif;
+      padding: 7px 20px;
+      margin-bottom: 10px;
+      border-radius: 5px;
+      border-left: 20px solid #f05d22;
+      box-shadow:
+        2px -2px 5px 0 rgba(0, 0, 0, 0.1),
+        -2px -2px 5px 0 rgba(0, 0, 0, 0.1),
+        2px 2px 5px 0 rgba(0, 0, 0, 0.1),
+        -2px 2px 5px 0 rgba(0, 0, 0, 0.1);
+      font-size: 20px;
+      letter-spacing: 2px;
+      transition: 0.3s all linear;
+    }
+    .border li:nth-child(2) {
+      border-color: #8bc63e;
+    }
+    .border li:nth-child(3) {
+      border-color: #fcba30;
+    }
+    .border li:nth-child(4) {
+      border-color: #1ccfc9;
+    }
+    .border li:nth-child(5) {
+      border-color: #493224;
+    }
+    .border li:hover {
+      border-left: 20px solid transparent;
+    }
+    .border li:nth-child(1):hover {
+      border-right: 20px solid #f05d22;
+    }
+    .border li:nth-child(2):hover {
+      border-right: 20px solid #8bc63e;
+    }
+    .border li:nth-child(3):hover {
+      border-right: 20px solid #fcba30;
+    }
+    .border li:nth-child(4):hover {
+      border-right: 20px solid #1ccfc9;
+    }
+    .border li:nth-child(5):hover {
+      border-right: 20px solid #493224;
+    }
+
     #col_email {
         text-align: right;
         width: 50%;
@@ -157,13 +209,12 @@
     }
 
     .btn-up {
-        /*font-size: 3.5em;*/
-        /*color: darkmagenta;*/
-        animation: shadow 2s infinite ease-in-out;
-    }
-
-
-    .btn-up {
+        /*content: "\21E7 Наверх";*/
+        font-family: "Times New Roman", Arial, sans-serif; /* Гарнитура шрифта */
+        font-size: 16px; /* Размер текста подсказки */
+        padding: 5px; /* Поля */
+        text-align: center;
+        align-content: center;
       position: fixed;
       background-color: #002f50;
       right: 10px;
@@ -171,25 +222,29 @@
       border-radius: 25px;
       cursor: pointer;
       display: flex;
-      align-items: center;
-      justify-content: center;
+        justify-content: center;
       transition: opacity 0.15s ease-in-out, transform 0.3s ease-in-out;
       color: #fff;
       width: 120px;
       height: 40px;
       opacity: 1;
       transform: translateY(0);
-        z-index: 300;
+        z-index: 1;
+        letter-spacing: 2px;
     }
 
-    /*Кнопка наверх и надпись после стрелки*/
-    .btn-up:after{
-        content: "Наверх";
-        font-family: "Times New Roman", Arial, sans-serif; /* Гарнитура шрифта */
-        font-size: 16px; /* Размер текста подсказки */
-        padding: 5px; /* Поля */
-        text-align: right;
+    .btn-up {
+        align-items: center;
     }
+
+    /*!*Кнопка наверх и надпись после стрелки*!*/
+    /*.btn-up:after{*/
+    /*    content: "Наверх";*/
+    /*    font-family: "Times New Roman", Arial, sans-serif; !* Гарнитура шрифта *!*/
+    /*    font-size: 16px; !* Размер текста подсказки *!*/
+    /*    padding: 5px; !* Поля *!*/
+    /*    text-align: center;*/
+    /*}*/
 
     .btn-up_hide {
       display: none;
