--- a/templates/application.html
+++ b/templates/application.html
@@ -20,6 +20,8 @@
     border-block: 10px;
     border-radius: 10px;
     word-break: break-word;
+       line-height: 1.2;
+       letter-spacing: normal;
    }
 
    .mail_sup {
@@ -36,20 +38,6 @@
 
 </style>
 
-
-    <script>
-        document.querySelectorAll('a[href^="#"]').forEach(anchor =&gt; {
-        anchor.addEventListener('click', function (e) {
-            e.preventDefault();
-
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-    </script>
-
-
     <div class="text-align: center">
 
     <table>
@@ -62,7 +50,7 @@
         </tr>
         <tr>
             <td id="col_App" colspan="3" >
-                <ul style="font-size: 20px; line-height: 1.3;">
+                <ul class="border" style="font-size: 20px; line-height: 1.2;">
                     <li><a href="#Описание приложения">Описание приложения</a></li>
                     <li><a href="#Лицензионное соглашение">Лицензионное соглашения</a></li>
                     <li><a href="#Системные требования">Системные требования</a></li>
@@ -71,7 +59,7 @@
 
                 <p id="Описание приложения" style="visibility: hidden; margin: 10px;">
                 <p id="Описание приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; margin-top: 30px; font-weight: bold;">Описание приложения<br>
-                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                    <div id="TextAbout" style="font-size: 18px; text-align: justify;">
                         Программа предназначена для классификации месторождений по действующим нормативным документам.
                         Сбор основной геолого-промысловой информации по месторождению (сведения о недропользователе,
                         геологические данные, данные по запасам УВС с указанием величин и их&nbsp;категорийности по принятым документам),
@@ -84,7 +72,7 @@
 
                 <p id="Лицензионное соглашение" style="visibility: hidden; margin: 10px; scroll-behavior: smooth;"</p>
                 <p id="Лицензионное соглашение" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; margin-top: 30px; font-weight: bold;">Лицензионное соглашение<br>
-                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                    <div id="TextAbout" style="font-size: 18px; text-align: justify;">
                         Программа является лицензированным программным продуктом.
                         Внимательно ознакомьтесь с условиями лицензионного соглашения перед началом работы с программным обеспечением, на которое оно распространяется.<br />
                         Установка, так же как и использование программы «Классификатор», свидетельствует о вашем согласии с условиями данного лицензионного соглашения.
@@ -146,7 +134,7 @@
 
                 <p id="Системные требования" style="visibility: hidden; margin: 10px;"</p>
                 <p id="Системные требования" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-top: 30px; font-weight: bold;">Системные требования<br>
-                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                    <div id="TextAbout" style="font-size: 18px; text-align: justify;">
                         <center>Для стабильной работы приложения необходимы следующие системные требования:</center><br>
 
                         <u>Минимальные системные требования:</u>
@@ -171,7 +159,7 @@
                     </div>
 
                 <p id="Ранние версии" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Ранние версии<br>
-                <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                <div id="TextAbout" style="font-size: 18px; text-align: justify;">
                     Последнюю версию приложения можно скачать по ссылке ниже:<br>
                     <center><a href="/static/files/Классификатор_5.4.1.zip" download="Классификатор_5.4.1.zip" ;
                                class="mail_sup">Классификатор 5.4.1</a> (21.09.2023)
