Adding up-button for the page upping

--- a/templates/application.html
+++ b/templates/application.html
@@ -21,7 +21,7 @@
     border-radius: 10px;
     word-break: break-word;
        line-height: 1.2;
-       letter-spacing: normal;
+       letter-spacing: 1px;
    }
 
    .mail_sup {
