--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -84,6 +84,9 @@
     .border {
       list-style: none;
       padding: 0;
+        line-height: 1.2;
+        letter-spacing: 1px;
+
     }
 
     .border li {
@@ -99,7 +102,8 @@
         2px 2px 5px 0 rgba(0, 0, 0, 0.1),
         -2px 2px 5px 0 rgba(0, 0, 0, 0.1);
       font-size: 20px;
-      letter-spacing: 2px;
+      letter-spacing: 1px;
+        line-height: 1.2;
       transition: 0.3s all linear;
     }
     .border li:nth-child(2) {
