--- a/templates/login.html
+++ b/templates/login.html
@@ -91,6 +91,19 @@
 
     <!--<a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/static/images/top_page.png" alt="top" width="36" ; height="36" ;/></a>-->
 
+    <body>
+        <h1>Вход</h1>
+        {% if error %}
+            <p style="color: red;">{{ error }}</p>
+        {% endif %}
+        <form method="post" action="{{ url_for('login') }}">
+            <label for="username">Имя пользователя:</label>
+            <input type="text" id="username" name="username" required><br>
+            <label for="password">Пароль:</label>
+            <input type="password" id="password" name="password" required><br>
+            <input type="submit" value="Войти">
+        </form>
+    </body>
 
 {% endblock %}
 
